kubernetes/apps/rook-ceph/rook-ceph/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  namespace: rook-ceph
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Rook Ceph
    gethomepage.dev/group: Services
    gethomepage.dev/icon: rook.svg
    gethomepage.dev/description: Storage cluster · LAN only
    kustomize.toolkit.fluxcd.io/substitute: "true"
spec:
  hostnames: ["rook.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          namespace: rook-ceph
          port: 7000
      matches:
        - path:
            type: PathPrefix
            value: /
